--- a/index.html
+++ b/index.html
@@ -8,6 +8,47 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="container"><header id="header">
+    <h1 id="title">NET <span>FLİX</span> </h1>
+    <h3 id="description">Thank you for signing up to Netflix. Tell me nore about yourself</h3>
+
+</header>
+
+<section id="servey-form-container">
+
+<form action="result.html" method="get">
+    <div class="input-box">
+<label for="name">Name</label>
+<br>
+<input type="text" name="">
+
+
+    </div>
+
+
+
+
+
+
+
+
+</form>
+
+
+</section>
+
+
+
+</div>
+
+
+
+
+
+
+
+    
+
     
 </body>
 </html>
