--- a/index.html
+++ b/index.html
@@ -18,11 +18,9 @@
 
 <form action="result.html" method="get">
     <div class="input-box">
-<label for="name">Name</label>
-<br>
-<input type="text" name="">
-
-
+        <label for="name">Name</label>
+        <br>
+        <input type="text" name="name" id="name" placeholder="Enter Your Name">
     </div>
 
 
