--- a/index.html
+++ b/index.html
@@ -1,52 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Netflix harvey</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div id="container"><header id="header">
-    <h1 id="title">NET <span>FLİX</span> </h1>
-    <h3 id="description">Thank you for signing up to Netflix. Tell me nore about yourself</h3>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div id="container">
+      <header id="header">
+        <h1 id="title">NET <span>FLİX</span></h1>
+        <h3 id="description">
+          Thank you for signing up to Netflix. Tell me nore about yourself
+        </h3>
+      </header>
 
-</header>
+      <section id="servey-form-container">
+        <form action="result.html" method="get">
+          <div class="input-box">
+            <label for="name">Name</label>
+            <br />
+            <input
+              type="text"
+              name="name"
+              id="name"
+              placeholder="Enter Your Name"
+            />
+          </div>
 
-<section id="servey-form-container">
+          <div class="input-box">
+            <label for="age">Age</label>
+            <br />
+            <input type="number" name="age" id="age" placeholder="age" />
+          </div>
 
-<form action="result.html" method="get">
-    <div class="input-box">
-        <label for="name">Name</label>
-        <br>
-        <input type="text" name="name" id="name" placeholder="Enter Your Name">
+          <div class="input-box">
+            <label for="email">Email</label>
+            <br />
+            <input
+              type="email"
+              name="Email"
+              id="email"
+              placeholder="Enter your Email"
+            />
+          </div>
+
+          <div class="input-box">
+            <label for="">Content Type</label>
+            <br />
+            <select name="content" id="dropdown">
+              <option value="movies">Movies</option>
+              <option value="series" selected >Series</option>
+              <option value="tv shows">TV Shows</option>
+            </select>
+          </div>
+
+          <div class="input-box">
+            <label for="">Movie Type</label>
+            <br>
+            <input type="checkbox" name="movie" id="First-check" value="Comedy">
+            <label for="first-check">Comedy</label>
+            <br>
+
+            <input type="checkbox" name="movie" id="First-check" value="Action">
+            <label for="secend-check">Action</label>
+            <br>
+
+            <input type="checkbox" name="movie" id="First-check" value="Romance">
+            <label for="third-check">Romance</label>
+          </div>
+
+           <div class="input-box">
+          <label for="">Gender</label>
+          <br>
+          <input type="radio" name="gender" id="first-radio" value="Male">
+          <label for="first-radio">Male</label>
+          <br>
+          <input type="radio" name="gender" id="secend-radio" value="Female">
+          <label for="secend-radio">Female</label>
+          <br>
+          <input type="radio" name="gender" id="third-radio" value="Other">
+          <label for="third-radio">Other</label>
+           </div>
+
+           <div class="input-box">
+              <label for="feedback">Feedback</label>
+              <br>
+              <textarea name="feedback" id="feedback" cols="30" rows="10" placeholder="any comend" ></textarea>
+
+           </div>
+
+           <div class="form-submit">
+            <input type="submit" value="Send" />
+
+           </div>
+
+        </form>
+      </section>
     </div>
-
-
-
-
-
-
-
-
-</form>
-
-
-</section>
-
-
-
-</div>
-
-
-
-
-
-
-
-    
-
-    
-</body>
+  </body>
 </html>
